working on product templates and endpoints, bump flakes version

--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ flask = "*"
 flask-bootstrap = "*"
 flask-mail = "*"
 flask-sqlalchemy = "*"
+flask-wtf = "*"
 
 [requires]
 python_version = "3.8"
