Cleanup and start all over again (#2)
* Cleanup and start all over again

* Add models

* Migrate

* add first blueprint and templates

* Add blueprints for cookbook, product and recipe

* working on product templates and endpoints, bump flakes version

--- a/Pipfile
+++ b/Pipfile
@@ -11,8 +11,10 @@ black = "*"
 
 [packages]
 flask = "*"
+flask-bootstrap = "*"
+flask-mail = "*"
 flask-sqlalchemy = "*"
-flask-restx = "*"
+flask-wtf = "*"
 
 [requires]
 python_version = "3.8"
