--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,4 @@
+exclude: 'migrations/'
 repos:
 -   repo: https://github.com/ambv/black
     rev: stable
@@ -5,6 +6,6 @@ repos:
     - id: black
       language_version: python3.8
 -   repo: https://gitlab.com/pycqa/flake8
-    rev: 3.7.9
+    rev: 3.8.3
     hooks:
     - id: flake8
